handle overflow bug as best i can for the moment

--- a/src/components/common/button/button.module.css
+++ b/src/components/common/button/button.module.css
@@ -23,6 +23,7 @@
   display: flex;
   padding-left: 0px;
   font-size: inherit;
+  background: none;
 }
 
 /* Delete Button */
